it will add changes to html and css files

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     padding-right:0x;
+    
 }
 h1{
     padding-bottom:500px;
@@ -68,6 +69,11 @@ h4{
     margin:10px;
     display: inline-flex;
    
+}
+
+.container-fluid{
+    text-align: center;
+    line-height: 30px;;
 }
 
 .services{
@@ -220,4 +226,9 @@ color:white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+
+
+#text1, #text2, #text3{
+display: none;
+}
 
