--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+*{
+    padding:0;
+    margin:0;
+}
 .homeimage{
     background-image: url("../IMAGES/backgrounds/h_img.jpg");
     color: white;
@@ -6,12 +10,10 @@
     text-align: center;
     margin-top: 0px;
     height: 120vh;
-
 }
 
 #logo{
-    padding-top: 140px;
-        
+    padding-top: 140px;   
 }
 
 #logo1{
@@ -25,7 +27,8 @@
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     height: 60vh;
-    padding-top: 90px;
+    padding-top: 110px;
+    line-height: 30px;
 }
 
 
@@ -33,6 +36,8 @@
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     line-height: 30px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .hd1{
